2019-12-29  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_other_scripts): add mktexlsr mktexmf
	mktexpk mktextfm, now maintained under Master.
	(bin_links): add mktexlsr:texhash.

2016-04-10  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_other_scripts): remove m-tx and pmx2pdf.

2015-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (texmf_other_scripts): Add fmtutil-sys.sh and
	updmap-sys.sh (maintained under Master).

2015-04-12  Norbert Preining  <norbert@preining.info>

	* Makefile.am (texmf_other_scripts): add fmtutil

2014-11-17  Karl Berry  <karl@tug.org>

	* Makefile.am: Use WIN_WRAPPER (w32_wrapper or w64_wrapper).

2014-07-18  Karl Berry  <karl@tug.org>

	* Makefile.am (bin_links): mkluatexfontdb gone.

2014-05-19  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_context_scripts): add contextjit, mtxrunjit.
	Remove ctxtools and pstopdf, which are not to be user-level
	executables any more even though they remain in stubs, per Hans.

2013-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32], ../w32_wrapper/context/mtxrun.{dll,exe}:
	Update ConTeXt wrappers (from Hans).

2013-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Install runscript.* and ConTeXt wrappers.

2013-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Install arara.exe wrapper.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (texmf_scriptsdir): Change texmf => texmf-dist.
	Change man dir link accordingly.

2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Install {rungs,tlmgr}.exe wrappers.

2012-09-09  Karl Berry  <karl@tug.org>

	* Makefile.am (echo-shell-scripts): new target for
	check-wrapper-consistency.

2012-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (installdirs-local): Make sure $(bindir) exists.

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil*, tcfmgr*, texconfig*, texlinks* (new): Moved from